# djangocms-moderation

./: .browserslistrc  .eslintrc.js  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  MANIFEST.in  README.rst  addon.json  codecov.yml  eslint.config.js  gulpfile.js  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini  webpack.config.js
.circleci/: Dockerfile  config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ---documentation-report.md
.github/workflows/: codeql.yml  docs.yml  frontend.yml  lint.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  test.yml
.tx/: config  transifex.yaml
djangocms_moderation/: __init__.py  actions.py  admin.py  admin_actions.py  apps.py  backends.py  cms_config.py  cms_toolbars.py  compact.py  conf.py  constants.py  emails.py  exceptions.py  filters.py  forms.py  handlers.py  helpers.py  managers.py  models.py  monkeypatch.py  monkeypatches.py  signals.py  utils.py  views.py
djangocms_moderation/migrations/: 0001_initial.py  0001_squashed_0017_auto_20220831_0727.py  0002_auto_20180405_1123.py  0002_auto_20180417_1507.py  0002_auto_20180417_1621.py  0002_auto_20180417_1726.py  0002_auto_20180420_0811.py  0002_auto_20180712_1433.py  0002_auto_20180724_1521.py  0002_auto_20180903_1206.py  0002_auto_20180903_1557.py  0002_auto_20180905_1152.py  0002_moderation_reference_number.py  0002_moderationcollection_author.py  0003_auto_20180405_1311.py  0003_auto_20180417_1727.py  0003_auto_20180420_0813.py  0003_auto_20180614_1516.py  0003_auto_20180724_1521.py  0003_auto_20180903_1206.py  0003_pagemoderation_disable_modearation.py  0004_auto_20180410_1138.py  0004_auto_20180412_1259.py  0004_auto_20180417_1733.py  0004_auto_20180502_1456.py  0004_auto_20180510_1622.py  0004_auto_20180612_1202.py  0004_auto_20180614_0919.py  0004_auto_20180614_1516.py  0004_auto_20180618_0854.py  0004_auto_20180618_2102.py  0004_auto_20180809_1028.py  0004_auto_20180907_1206.py  0004_pagemoderationrequestaction_is_archived.py  0005_auto_20180618_2102.py  0005_auto_20180809_1042.py  0005_auto_20180919_1348.py  0005_auto_20180924_1433.py  0005_pagemoderationrequestaction_is_archived.py  0005_remove_workflow_is_reference_number_required.py  (+35 more)
docs/: admin_moderation.rst  collection.rst  comment.rst  conf.py  index.rst  internals.rst  introduction.rst  lock.rst  management_commands.rst  moderation_collection.rst  moderation_integration.rst  moderation_request.rst  moderation_request_action.rst  notifications.rst  overview.rst  reference.rst  references.rst  requirements.in  requirements.txt  role.rst  signals.rst  tree_admin.rst  workflow.rst  workflow_step.rst
docs/explanation/: index.rst  (+10 more)
tests/: requirements.txt  settings.py  test_a_migrations.py  test_admin.py  test_admin_actions.py  test_app_registration.py  test_cms_config.py  test_cms_toolbars.py  test_e2e.py  test_forms.py  test_handlers.py  test_helpers.py  test_integration.py  test_management_commands.py  test_managers.py  test_migrations.py  test_models.py  test_moderation_flows.py  test_monkeypatch.py  test_signals.py  test_unpublish_flow.py  test_utils.py  test_views.py  urls.py  utils.py
(+161 files in other folders)
